--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title> Home </title>
-<link rel="stylesheet" type="text/css" media="screen" href="main.css"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home</title>
+  <link rel="stylesheet" type="text/css" media="screen" href="main.css"/>
 </head>
+
 <body>
-<h1>SIT223-SIT753 - Professional Practice in IT</h1>
+  <div>
+    <img src="logo.svg" alt="Deakin" width="200" height="210">
+  </div>
+
+  <h1>SIT223-SIT753 - Professional Practice in IT</h1>
 </body>
 </html>
